syntax = "proto3";

message RequestDigitalWrite {
    uint32 pin = 1;
    uint32 value = 2;
}

// See: https://www.arduino.cc/reference/en/language/functions/digital-io/pinmode/
enum PinMode {
    INPUT = 0;
    OUTPUT = 1;
    INPUT_PULLUP = 2;
}

message RequestPinMode {
    uint32 pin = 1;
    PinMode mode = 2;
}

message RequestDigitalRead {
    uint32 pin = 1;
}

message ResponseDigitalRead {
    uint32 value = 1;
}

message SpiSettings {
    uint32 speed = 1;
    enum ByteOrder {
        MSBFIRST = 0;
        LSBFIRST = 1;
    }
    ByteOrder byteOrder = 2;
    enum DataMode {
        SPI_MODE0 = 0;
        SPI_MODE1 = 1;
        SPI_MODE2 = 2;
        SPI_MODE3 = 3;
    }
    DataMode dataMode = 3;
}

message RequestSpiBeginTransaction
{
    SpiSettings settings = 1;
}

message RequestSpiEndTransaction
{

}

message RequestSpiTransfer {
    bytes data = 1;
}

message ResponseSpiTransfer {
    bytes data = 1;
}

message RequestSpiWrite
{
    bytes data = 1;
}

message ResponseSpiWrite
{
    uint32 length = 1;
}

message RequestSpiRead
{
    uint32 length = 1;
}

message ResponseSpiRead
{
    bytes data = 1;
}

message HostedCommand {
    // Version of the protocol for future compatibility
    enum Version {
        HOSTED_V_1_0 = 0;
    }
    Version version = 1;
    oneof payload {
        RequestDigitalWrite requestDigitalWrite = 10;
        RequestPinMode requestPinMode = 11;
        RequestDigitalRead requestDigitalRead = 12;
        ResponseDigitalRead responseDigitalRead = 13;
        RequestSpiBeginTransaction requestSpiBeginTransaction = 14;
        RequestSpiEndTransaction  requestSpiEndTransaction = 15;
        RequestSpiTransfer requestSpiTransfer = 16;
        ResponseSpiTransfer responseSpiTransfer  = 17;
        RequestSpiWrite requestSpiWrite = 18;
        ResponseSpiWrite responseSpiWrite = 19;
        RequestSpiRead requestSpiRead = 20;
        ResponseSpiRead responseSpiRead = 21;
    }
}
